--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   backend:
     build:
-      context: ./backend  # Path to the backend directory containing the Dockerfile
+      context: ./backend
     ports:
       - "8000:8000"
     volumes:
